load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")
load("@rules_apple//apple:apple.bzl", "apple_xcframework")
load("@rules_android//rules:rules.bzl", "android_library")

# --- Common ---

FLMLN_SRCS = glob(["src/**/*.cpp"])
FLMLN_HDRS = glob(["src/**/*.h", "src/**/*.hpp"])
FLMLN_PUBLIC_HDRS = glob(["src/**/*.h"])
FLMLN_FLAGS = ["-fobjc-arc"]
FLMLN_LINKOPTS = [
    "-L/opt/homebrew/opt/icu4c/lib",
]

# --- iOS ---

objc_library(
    name = "flmln_ios",
    deps = [
        "//platform/default:mbgl-default",
        "//platform:ios-sdk",
        "//:mbgl-core"
    ],
    srcs = FLMLN_SRCS,
    hdrs = FLMLN_HDRS,
    copts = CPP_FLAGS + MAPLIBRE_FLAGS + FLMLN_FLAGS,
    linkopts = FLMLN_LINKOPTS,
    defines = [
        "FLMLN_IOS=1",
        "FLMLN_MTL=1"
    ],
    visibility = ["//visibility:public"],
)

apple_xcframework(
    name = "flmln_ios_xcframework",
    deps = [":flmln_ios"],
    bundle_id = "com.kekland.flmln",
    infoplists = ["darwin/Info.plist"],
    public_hdrs = FLMLN_PUBLIC_HDRS,
    minimum_os_versions = {"ios": "12.0"},
    ios = {
        "simulator": ["x86_64", "arm64"],
        "device": ["arm64"],
    },
    visibility = ["//visibility:public"],
)

# --- macOS ---

objc_library(
    name = "flmln_macos",
    deps = [
        "//platform/default:mbgl-default",
        "//platform:macos-objcpp",
        "//:mbgl-core"
    ],
    srcs = FLMLN_SRCS,
    hdrs = FLMLN_HDRS,
    copts = CPP_FLAGS + MAPLIBRE_FLAGS + FLMLN_FLAGS,
    linkopts = FLMLN_LINKOPTS,
    defines = [
        "FLMLN_MACOS=1",
        "FLMLN_MTL=1"
    ],
    visibility = ["//visibility:public"],
)

apple_xcframework(
    name = "flmln_macos_xcframework",
    deps = [":flmln_macos"],
    bundle_id = "com.kekland.flmln",
    infoplists = ["darwin/Info.plist"],
    public_hdrs = FLMLN_PUBLIC_HDRS,
    minimum_os_versions = {"macos": "10.15"},
    macos = ["x86_64", "arm64"],
    visibility = ["//visibility:public"],
)

# --- Android ---

cc_library(
    name = "flmln_android_native",
    deps = [
        "//platform/default:mbgl-default",
        "//:mbgl-core",
    ],
    srcs = FLMLN_SRCS,
    hdrs = FLMLN_HDRS,
    copts = CPP_FLAGS + MAPLIBRE_FLAGS + FLMLN_FLAGS,
    linkopts = FLMLN_LINKOPTS + ['-lEGL'],
    defines = [
        "FLMLN_ANDROID=1",
        "FLMLN_OPENGL=1"
    ],
    visibility = ["//visibility:public"],
)

android_library(
    name = "flmln_android",
    srcs = glob(["android/**/*.java"]),
    deps = [":flmln_android_native"],
    manifest = "android/AndroidManifest.xml",
    custom_package = "com.kekland.flmln",
    visibility = ["//visibility:public"]
)

# ... TODO

# Linux

# ... TODO

# Windows

# ... TODO
